test/expected/config-error.out
cdecl: error: configuration file "/does/not/exist": No such file or directory
/* begin "data/error.cdeclrc" */
cdecl> typedef int
                  ^
data/error.cdeclrc:1,12: syntax error: unexpected end of command
